plugins {
    id 'java'
    id 'com.gradleup.shadow' version '9.0.0-beta4'
}

group 'com.extendedclip.papi.expansion.javascript'
version '2.1.4'

sourceCompatibility = 17
targetCompatibility = 17

repositories {
    mavenCentral()
    maven {
        url = "https://repo.glaremasters.me/repository/public/"
    }
}

dependencies {
    compileOnly project(':evaluator-api')
    // Nashorn start
    compileOnly("org.openjdk.nashorn:nashorn-core:15.6")
    compileOnly("org.ow2.asm:asm:9.7.1")
    compileOnly("org.ow2.asm:asm-commons:9.7.1")
    compileOnly("org.ow2.asm:asm-util:9.7.1")
    // Nashorn end
    compileOnly("io.webfolder:quickjs:1.1.0") // QuickJS
    // V8 start
    compileOnly("com.caoccao.javet:javet:4.1.1")
    compileOnly("com.caoccao.javet:javet-v8-linux-arm64:4.1.1")
    compileOnly("com.caoccao.javet:javet-v8-linux-x86_64:4.1.1")
    compileOnly("com.caoccao.javet:javet-v8-macos-arm64:4.1.1")
    compileOnly("com.caoccao.javet:javet-v8-macos-x86_64:4.1.1")
    compileOnly("com.caoccao.javet:javet-v8-windows-x86_64:4.1.1")
    compileOnly("com.caoccao.javet:javet-node-linux-arm64:4.1.1")
    compileOnly("com.caoccao.javet:javet-node-linux-x86_64:4.1.1")
    compileOnly("com.caoccao.javet:javet-node-macos-arm64:4.1.1")
    compileOnly("com.caoccao.javet:javet-node-macos-x86_64:4.1.1")
    compileOnly("com.caoccao.javet:javet-node-windows-x86_64:4.1.1")
    // V8 end
    implementation("io.github.slimjar:slimjar:1.2.6")

    implementation("org.apache.maven:maven-resolver-provider:3.9.6")
    implementation("org.eclipse.aether:aether-connector-basic:1.1.0")
    implementation("org.eclipse.aether:aether-transport-file:1.1.0")
    implementation("org.eclipse.aether:aether-transport-http:1.1.0")
    testImplementation group: 'junit', name: 'junit', version: '4.12'
}
